fixed container margins without pagination on mobile

--- a/scss/theme/_blog.scss
+++ b/scss/theme/_blog.scss
@@ -57,11 +57,11 @@
   }
 
   .bricklayer  {
-    margin-bottom: 1.6rem;
+    // margin-bottom: 1.6rem;
   }
 
   .blog-posts  {
-    margin-bottom: 1.6rem;
+    // margin-bottom: 1.6rem;
   }
 
   .bricklayer-column {
@@ -116,6 +116,7 @@
 
 .pagination {
   margin: 0px;
+  margin-top: 1.6rem;
   padding: 0px;
 }
 
